add region, sub,region and timezones

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <p id="country-capital"></p>
     <p id="country-currency"></p>
     <p id="country-language"></p>
+    <p id="country-region"></p>
+    <p id="country-subregion"></p>
+    <p id="country-timezone"></p>
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
