add card css to country info

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h2 class="text-2xl pb-5 pt-3 block">A map of places I've been, built with D3.js.</h2>
     </div>
     <div id="map" class="map-styles"></div>
-    <div class="country-info">
+    <div class="country-info card">
     <img id="country-flag" src="#"></img>
     <p id="country-name"></p>
 
