add toggle to see more map card

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </span> -->
             <p class="info-item-text" id="country-timezone"></p>
       </div>
-        <button id="more-info">More Info</button>
+        <button id="more-info">Flip it</button>
 
         
 
