add visited country count to text info at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div id="map" class="map-styles">
     <div class="description py-2">
-      <p class="">A map of countries visited by <a href="https://www.tuckertriggs.com">Tucker Triggs</a>. See on <a href="https://github.com/tuckpuck/world-map">Github</a>. Built using <a href="https://d3js.org/">D3.js</a> and <a href="https://datamaps.github.io/">Datamaps</a>.</p>
+      <p class="">A map of the <span id="country-count"></span> countries visited by <a href="https://www.tuckertriggs.com">Tucker Triggs</a>. See on this project on  <a href="https://github.com/tuckpuck/world-map">Github</a>. Built using <a href="https://d3js.org/">D3.js</a> and <a href="https://datamaps.github.io/">Datamaps</a>.</p>
     </div>
   </div>
   <div class="country-info card" id="card">
